# agentprobe

./: .gitignore  Makefile  README.md  pyproject.toml
src/agentprobe/: __init__.py  __main__.py  cli.py  config.py
src/agentprobe/api/: __init__.py  handlers.py  router.py  websocket.py
src/agentprobe/cert/: trust.py
src/agentprobe/parser/: anthropic.py  detector.py  google.py  mcp.py  openai.py  session.py
src/agentprobe/proxy/: addon.py  launcher.py  sse.py
src/agentprobe/storage/: database.py  models.py  queries.py
tests/test_parser/: test_detector.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/layout/: Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
web/src/components/parse/: AnthropicMessageView.tsx  ParsePage.tsx
web/src/components/traffic/: BodyViewer.tsx  HeadersView.tsx  RequestDetail.tsx  RequestList.tsx  SSEViewer.tsx  UnknownHostRequestsPanel.tsx
web/src/hooks/: useWebSocket.ts
web/src/services/: parseService.ts
web/src/stores/: trafficStore.ts
web/src/types/: index.ts
web/src/utils/: api.ts  helpers.ts
